--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>legendary start</title>
 </head>
 <body>
-  <p>This website was created on the 24th of june by exactly <strong>9:12pm.</strong> hopefully, this would be the start to something big, something <strong>legendary.</strong> welcome to my vision</p>  
+  <h5>This website was created on the 24th of june by exactly <strong>9:12pm.</strong> hopefully, this would be the start to something big, something <strong>legendary.</strong> welcome to my vision</h5>  
   <h1>LEGENDARY BANKING</h1>
     <p>Welcome to the legendary banking website. This is a simple HTML page that serves as a starting point for your legendary journey.Welcome to Legendary banking
 At legendary, we believe that banking should be simple, secure, and built around you.
