--- a/index.html
+++ b/index.html
@@ -30,5 +30,13 @@ Welcome to the future of banking. Welcome to legendary banking.</p>
         </ul>
     <h3>Contact Us</h3>
         <p>If you have any questions or need assistance, please reach out to us at chinweowku.24@gmail.com 
+            <dl>
+                <dt><h3>Trade</h3></dt>
+                <dd>We offer a wide range of trading services to help you manage your investments effectively.</dd>
+                <dt><h3>Loans</h3></dt>
+                <dd>Our loan services are designed to provide you with the financial support you need, when you need it.</dd>
+                <dt><h3>Investments</h3></dt>
+                <dd>We provide expert investment advice and opportunities to help you grow your wealth.</dd>
+            </dl>
 </body>
 </html>
