--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Welcome to the future of banking. Welcome to legendary banking.</p>
             <li>providing finicial security</li>
             <li>building trust</li>
             <li>empowering you to do great things</li>
-             <li>quick and easy loans</li>
+             <li>quick and easy loans.</li>
 
         </ul>
     <h3>Contact Us</h3>
